--- a/OGA.Base/OGA.DA/OGA.DA.vbproj
+++ b/OGA.Base/OGA.DA/OGA.DA.vbproj
@@ -114,6 +114,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="PriceDA.vb" />
+    <Compile Include="StockPriceDA.vb" />
     <Compile Include="TargetDA.vb" />
     <Compile Include="UtilityDA.vb" />
   </ItemGroup>
