--- a/OGA.Base/OGA.BI/OGA.BI.vbproj
+++ b/OGA.Base/OGA.BI/OGA.BI.vbproj
@@ -64,6 +64,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StockPriceBI.vb" />
     <Compile Include="アラート.vb" />
     <Compile Include="ゴールデンクロス.vb" />
     <Compile Include="ターゲット.vb" />
